# func_prog_project

./: CHANGELOG.md  README.md  ast_output.txt  input.txt  input.txt.ast  input.txt.ll  input.txt.ll.ll  output.ll  refal-llvm.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/1f23c45f/: cabal_macros.h
.stack-work/ghci/21b60d04/: cabal_macros.h
.stack-work/ghci/3fe62410/: cabal_macros.h
.stack-work/ghci/4959be15/: cabal_macros.h
.stack-work/ghci/71498c6e/: cabal_macros.h
.stack-work/ghci/731c2d2d/: cabal_macros.h
.stack-work/ghci/c995cbf6/: cabal_macros.h
.stack-work/ghci/dbdc9524/: cabal_macros.h
src/: AST.hs  Codegen.hs  Lexer.hs  Main.hs  Parser.hs
